Remove merriweather font

--- a/default.hbs
+++ b/default.hbs
@@ -1759,7 +1759,7 @@ function() {
                 
             var l2 = document.createElement('link'); 
             l2.rel = 'stylesheet';
-            l2.href = '//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400';
+            l2.href = '//fonts.googleapis.com/css?family=Open+Sans:700,400';
             var h = document.getElementsByTagName('head')[0]; 
 
 
