--- a/default.hbs
+++ b/default.hbs
@@ -820,7 +820,7 @@ iframe,
 .no-cover .page-description {
     color: rgba(0, 0, 0, 0.5)
 }
-.home-template .page-title {
+/*.home-template .page-title {
     -webkit-animation: fade-in-down 0.6s;
     animation: fade-in-down 0.6s;
     -webkit-animation-delay: 0.2s;
@@ -831,7 +831,7 @@ iframe,
     animation: fade-in-down 0.9s;
     -webkit-animation-delay: 0.1s;
     animation-delay: 0.1s
-}
+}*/
 .post {
     position: relative;
     width: 80%;
