Add twitter link

--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -11,8 +11,13 @@
             <a class="nav-icon icon-feed" href="{{@blog.url}}/rss/"></a>
         </li>
         <li class="nav-other" role="presentation">
+            <a class="nav-icon icon-twitter" href="https://twitter.com/bubbleroadgames/"></a>
+        </li>
+        <li class="nav-other" role="presentation">
             <a class="nav-icon icon-facebook" href="https://www.facebook.com/bubbleroad/"></a>
         </li>
+
+       
 
     </ul>
 
