--- a/post.hbs
+++ b/post.hbs
@@ -71,7 +71,6 @@
     </article>
 
 
-
 </main>
 
 <aside class="read-next">
@@ -94,7 +93,7 @@
 </aside>
 
 
-<section class="disqus inner">
+<section class="disqus post">
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         var disqus_shortname = 'bubbleroad'; 
