--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -7,18 +7,18 @@
             <li class="nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
         {{/foreach}}
 
-        <li class="nav-other" role="presentation">
-            <a class="nav-icon icon-feed" href="{{@blog.url}}/rss/"></a>
-        </li>
-        <li class="nav-other" role="presentation">
-            <a class="nav-icon icon-twitter" href="https://twitter.com/bubbleroadgames/"></a>
-        </li>
-        <li class="nav-other" role="presentation">
+    </ul>
+
+    <ul class="nav-social">
+        <li role="presentation">
             <a class="nav-icon icon-facebook" href="https://www.facebook.com/bubbleroad/"></a>
         </li>
-
-       
-
+        <li role="presentation">
+            <a class="nav-icon icon-twitter" href="https://twitter.com/bubbleroadgames/"></a>
+        </li>
+        <li role="presentation">
+            <a class="nav-icon icon-feed" href="{{@blog.url}}/rss/"></a>
+        </li>
     </ul>
 
 
