--- a/default.hbs
+++ b/default.hbs
@@ -47,7 +47,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" /> -->
     <style>
     html {
-    font-family: sans-serif;
+    font-family: 'Lato', sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%
 }
@@ -230,7 +230,7 @@ th {
 }
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
-    font-family: "casper-icons", "Open Sans", sans-serif;
+    font-family: "casper-icons", "Montserrat", sans-serif;
     speak: none;
     font-style: normal;
     font-weight: normal;
@@ -282,7 +282,7 @@ html {
 body {
     height: 100%;
     max-height: 100%;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Lato', sans-serif;
     letter-spacing: 0.01rem;
     font-size: 1.8rem;
     line-height: 1.75em;
@@ -291,6 +291,9 @@ body {
     -moz-font-feature-settings: 'kern' 1;
     -o-font-feature-settings: 'kern' 1;
     text-rendering: geometricPrecision
+}
+a.read-more {
+	color: #3A4145;
 }
 ::-moz-selection {
     background: #D6EDFF
@@ -310,7 +313,7 @@ h6 {
     color: #2E2E2E;
     line-height: 1.15em;
     margin: 0 0 0.4em 0;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Monserrat", sans-serif;
     text-rendering: geometricPrecision
 }
 h1 {
@@ -335,11 +338,12 @@ h6 {
     font-size: 2rem
 }
 a {
-    color: #4A4A4A;
+    color: #DF305A;
+    text-decoration: none;
     transition: color 0.3s ease
 }
 a:hover {
-    color: #111
+    color: #F7905B;
 }
 p,
 ul,
@@ -461,7 +465,7 @@ kbd {
     padding: 1px 8px;
     border: #CCC 1px solid;
     color: #666;
-    text-shadow: #FFF 0 1px 0;
+    text-shadow: #fff 0 1px 0;
     font-size: 0.9em;
     font-weight: 700;
     background: #F4F4F4;
@@ -499,7 +503,7 @@ table tbody + tbody {
     border-top: #EFEFEF 2px solid
 }
 table table table {
-    background-color: #FFF
+    background-color: #fff
 }
 table tbody > tr:nth-child(odd) > td,
 table tbody > tr:nth-child(odd) > th {
@@ -552,16 +556,17 @@ iframe,
     transition: transform 0.5s ease
 }
 .main-header {
+
     position: relative;
-    margin-top: 4rem;
     display: table;
     width: 100%;
-    height: 100vh;
-    margin-bottom: 5rem;
+    height: 35vh;
+    /*margin-top: 0;*/
+    padding-top: 15%;
     text-align: center;
     background: #222 no-repeat center center;
     background-size: cover;
-    overflow: hidden
+    overflow: hidden;
 }
 .main-header .inner {
     width: 80%
@@ -573,52 +578,84 @@ iframe,
 }
 .main-nav a {
     text-decoration: none;
-    font-family: 'Open Sans', sans-serif
+    font-family: 'Montserrat', sans-serif;
 }
 .nav {
-    text-align: center;
-    position: fixed;
-    top: 0;
-    left: 0;
+    /*text-align: center;*/
+    padding: .8rem 0 .8rem 0;
+    /*position: fixed;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*right: 0;*/
+    /*z-index: 9999;*/
+    /*height: 2rem;*/
+/*    background-color: #DF305A;*/
+    /*margin: 0;*/
+    /*padding: 0;*/
+    position: absolute;
+    bottom: 0;
     right: 0;
-    z-index: 9999;
-    height: 2rem;
-    background-color: #000;
-    padding: 1rem
+    left: 0;
+    background-color: rgba(223, 48, 90, 0.85); /* #DF305A; */
+
 }
+.no-cover .nav{
+	background-color: #DF305A !important;
+	position: fixed !important;
+	top: 0 !important;
+	bottom: inherit !important;
+}
+
 .nav ul {
     padding: 0;
+    width: 80%;
+    max-width: 710px;
+    margin: 0 auto;
+    text-align: left;
     list-style: none;
     list-style-type: none;
-    margin: 0;
-    line-height: 2rem
 }
-.nav li:before {
-    padding-right: 4%;
-    padding-left: 5px;
-    font-size: 1.2rem;
-    color: #B8B8B8
+
+ul.nav-social {
+	/*float: right;*/
+	text-align: right;
+	    margin-top: -2.6rem;
 }
+.nav.fixed {
+	position: fixed;
+	top: 0;
+	bottom: inherit;
+	background-color: #DF305A;
+	z-index: 99999;
+}
+
 .nav li {
     margin: 0;
     display: inline-block;
     line-height: 100%;
-    float: left
+
 }
+
 .nav li a {
+	text-decoration: none;
     line-height: 100%;
     font-size: 1.6rem;
     overflow: hidden;
     white-space: nowrap;
+    color: #fff;
+    font-weight: 700;
     text-overflow: ellipsis;
-    padding: 0 .5rem 0 .5rem
+    padding-right: 1rem;
+}
+.nav li a:hover {
+	color: #F7905B;
 }
 .nav .nav-current a,
 .nav-icon {
     text-decoration: none
 }
 .nav .nav-icon {
-    padding: 0 0 0 1.6rem;
+    /*padding: 0 0 0 1.6rem;*/
     font-size: 2rem;
     /*line-height: 2rem;*/
 }
@@ -629,13 +666,22 @@ iframe,
     width: 100%;
     height: 1px
 }
-.nav a:link,
+/*.nav a:link,
 .nav a:visited {
-    color: #fff
-}
-.nav .nav-other {
-    float: right
-}
+    color: #FACA99;
+}*/
+/*.nav .nav-other {
+    text-align: right;
+}*/
+
+    .post-image img {
+    	    display: block;
+    max-width: 100%;
+    height: auto;
+    padding: 0.6em 0;
+    position: relative;
+
+    }
 .subscribe-button {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -650,7 +696,7 @@ iframe,
     color: #111 !important;
     text-align: center;
     font-size: 12px;
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
     text-decoration: none;
     line-height: 35px;
@@ -705,19 +751,20 @@ iframe,
     display: none
 }
 .blog-logo {
-    display: block;
-    float: left;
+    display: inline-block;
+    /*float: left;*/
     background: none !important;
-    border: none !important
+    border: none !important;
+    vertical-align: -38%;
+    margin-right: 2px;
 }
 .blog-logo img {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     display: block;
-    height: 38px;
-    padding: 1px 0 5px 0;
-    width: auto
+    height: 70px;
+    width: auto;
 }
 .menu-button {
     -webkit-box-sizing: border-box;
@@ -792,22 +839,30 @@ iframe,
 .no-cover .main-nav.overlay {
     background: none
 }
+.main-header-content {
+	    margin: -2rem auto 0 auto;
+}
 .page-title {
-    margin: 10px 0 10px 0;
+    margin: 16px 0 10px 0;
     font-size: 5rem;
-    letter-spacing: -1px;
+    letter-spacing: -2px;
     font-weight: 700;
-    font-family: "Open Sans", sans-serif;
-    color: #fff
+    font-family: 'Montserrat', sans-serif;
+}
+.page-title .bubble {
+	color: #DF305A;
+}
+.page-title .road {
+	color: #F7905B;
 }
 .page-description {
-    margin: 0;
-    font-size: 2rem;
+    margin: -2rem 0 0 18rem;
+    font-size: 1.8rem;
     line-height: 1.5em;
     font-weight: 400;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Lato', sans-serif;
     letter-spacing: 0.01rem;
-    color: rgba(255, 255, 255, 0.8)
+    color: rgba(255,255,255,.45);
 }
 .no-cover.main-header {
     min-height: 160px;
@@ -851,12 +906,12 @@ iframe,
     bottom: -5px;
     left: 50%;
     margin-left: -5px;
-    background: #FFF;
+    background: #fff;
     border-radius: 100%;
-    box-shadow: #FFF 0 0 0 5px
+    box-shadow: #fff 0 0 0 5px
 }
 body:not(.post-template) .post-title {
-    font-size: 3.6rem
+    font-size: 2.4rem
 }
 .post-title a {
     text-decoration: none
@@ -872,7 +927,7 @@ body:not(.post-template) .post-title {
 .post-meta {
     display: block;
     margin: 1.75rem 0 0 0;
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 1.5rem;
     line-height: 2.2rem;
     color: #9EABB3
@@ -1015,7 +1070,7 @@ body:not(.post-template) .post-title {
     color: #9EABB3
 }
 .author-meta a:hover {
-    color: #111
+    color: #F7905B;
 }
 .post-footer .author {
     margin-right: 180px
@@ -1031,22 +1086,23 @@ body:not(.post-template) .post-title {
     position: absolute;
     top: 6rem;
     right: 0;
-    width: 140px
+    width: 140px;
+    text-align: center;
 }
 .post-footer .share a {
     font-size: 1.8rem;
     display: inline-block;
-    margin: 1rem 1.6rem 1.6rem 0;
-    color: #BBC7CC;
+    margin: 1rem .8rem 1.6rem 0;
+    /*color: #DF305A;*/
     text-decoration: none
 }
-.post-footer .share .icon-twitter:hover {
+.post-footer .share .icon-twitter {
     color: #55acee
 }
-.post-footer .share .icon-facebook:hover {
+.post-footer .share .icon-facebook {
     color: #3b5998
 }
-.post-footer .share .icon-google-plus:hover {
+.post-footer .share .icon-google-plus {
     color: #dd4b39
 }
 .post-head.main-header {
@@ -1054,9 +1110,10 @@ body:not(.post-template) .post-title {
     min-height: 180px
 }
 .no-cover.post-head.main-header {
-    height: 85px;
+    height: 52px;
     min-height: 0;
-    margin-bottom: 0;
+    padding: 0;
+            margin-bottom: 4rem;
     background: transparent
 }
 .tag-head.main-header {
@@ -1087,9 +1144,9 @@ body:not(.post-template) .post-title {
     bottom: -5px;
     left: 50%;
     margin-left: -5px;
-    background: #FFF;
+    background: #fff;
     border-radius: 100%;
-    box-shadow: #FFF 0 0 0 5px
+    box-shadow: #fff 0 0 0 5px
 }
 .author-image {
     -webkit-box-sizing: border-box;
@@ -1144,7 +1201,7 @@ body:not(.post-template) .post-title {
 }
 .author-profile .author-meta {
     margin: 2rem 0;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Lato', sans-serif;
     letter-spacing: 0.01rem;
     font-size: 1.7rem
 }
@@ -1193,9 +1250,11 @@ body:not(.post-template) .post-title {
     transition: all 0.2s ease
 }
 .read-next-story:hover .post:before {
-    color: #222;
-    background: #fff;
+    /*color: #F7905B;*/
+    /*background: #fff;*/
     transition: all 0.2s ease
+    color: #F7905B !important;
+    border: #F7905B 1px solid !important;
 }
 .read-next-story:before {
     content: "";
@@ -1217,9 +1276,9 @@ body:not(.post-template) .post-title {
     padding: 4px 10px 5px;
     text-transform: uppercase;
     font-size: 1.1rem;
-    font-family: "Open Sans", sans-serif;
-    color: rgba(255, 255, 255, 0.8);
-    border: rgba(255, 255, 255, 0.5) 1px solid;
+    font-family: 'Montserrat', sans-serif;
+    color: #DF305A;
+    border: #DF305A 1px solid;
     border-radius: 4px;
     transition: all 0.5s ease
 }
@@ -1241,8 +1300,8 @@ body:not(.post-template) .post-title {
     display: none
 }
 .read-next-story.no-cover .post:before {
-    color: rgba(0, 0, 0, 0.5);
-    border-color: rgba(0, 0, 0, 0.2)
+    color: #DF305A;
+    border-color: #DF305A;
 }
 .read-next-story.no-cover h2 {
     color: rgba(0, 0, 0, 0.8)
@@ -1282,13 +1341,13 @@ body:not(.post-template) .post-title {
     width: 80%;
     max-width: 710px;
     margin: 4rem auto;
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 1.3rem;
     color: #9EABB3;
     text-align: center
 }
 .pagination a {
-    color: #9EABB3;
+    color: #DF305A;
     transition: all 0.2s ease
 }
 .older-posts,
@@ -1296,11 +1355,14 @@ body:not(.post-template) .post-title {
     position: absolute;
     display: inline-block;
     padding: 0 15px;
-    border: #bfc8cd 1px solid;
+    border: #DF305A 1px solid;
     text-decoration: none;
     border-radius: 4px;
     transition: border 0.3s ease
 }
+/*paginationa.newer-posts a {
+
+}*/
 .older-posts {
     right: 0
 }
@@ -1314,8 +1376,8 @@ body:not(.post-template) .post-title {
 }
 .older-posts:hover,
 .newer-posts:hover {
-    color: #889093;
-    border-color: #98a0a4
+    color: #F7905B;
+    border-color: #F7905B;
 }
 .extra-pagination {
     display: none;
@@ -1331,9 +1393,9 @@ body:not(.post-template) .post-title {
     bottom: -5px;
     left: 50%;
     margin-left: -5px;
-    background: #FFF;
+    background: #fff;
     border-radius: 100%;
-    box-shadow: #FFF 0 0 0 5px
+    box-shadow: #fff 0 0 0 5px
 }
 .extra-pagination .pagination {
     width: auto
@@ -1348,7 +1410,7 @@ body:not(.post-template) .post-title {
     position: relative;
     margin: 8rem 0 0 0;
     padding: 1rem 15px;
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 1rem;
     line-height: 1.75em;
     color: #BBC7CC
@@ -1379,8 +1441,8 @@ body:not(.post-template) .post-title {
         box-sizing: border-box;
         height: auto;
         min-height: 240px;
-        height: 60vh;
-        padding: 15% 0
+        height: 45vh;
+        padding: 15% 0;
     }
     .scroll-down,
     .home-template .main-header:after {
@@ -1390,22 +1452,27 @@ body:not(.post-template) .post-title {
         min-height: 180px;
         padding: 10% 0
     }
-    .blog-logo img {
-        padding: 4px 0
+/*    .blog-logo  {
+    	vertical-align: -25%;
+    }*/
+	 .blog-logo img {
+         height: 56px;
+    
     }
     .page-title {
         font-size: 4rem;
         letter-spacing: -1px
     }
     .page-description {
-        font-size: 1.8rem;
+        font-size: 1.6rem;
+        margin: -1.5rem 0 0 14rem;
         line-height: 1.5em
     }
     .post {
         font-size: 0.95em
     }
     body:not(.post-template) .post-title {
-        font-size: 3.2rem
+        font-size: 2.2rem
     }
     hr {
         margin: 2.4em 0
@@ -1454,8 +1521,9 @@ body:not(.post-template) .post-title {
         height: 30vh
     }
     .no-cover.post-head.main-header {
-        height: 55px;
-        padding: 0
+        height: 52px;
+        padding: 0;
+        margin-bottom: 2rem;
     }
     .no-cover.author-head.main-header {
         padding: 0
@@ -1479,7 +1547,7 @@ body:not(.post-template) .post-title {
 @media only screen and (max-width: 500px) {
     .main-header {
         margin-bottom: 15px;
-        height: 40vh
+        height: 38vh;
     }
     .no-cover.main-header {
         height: 30vh
@@ -1487,17 +1555,18 @@ body:not(.post-template) .post-title {
     .archive-template .main-header {
         max-height: 20vh;
         min-height: 160px;
-        padding: 10% 0
+        padding: 10% 0;
     }
     .main-nav {
         padding: 5px;
         margin-bottom: 2rem
     }
-    .blog-logo {
-        padding: 5px
-    }
+/*    .blog-logo {
+       vertical-align: -25%;
+    }*/
     .blog-logo img {
-        height: 30px
+        height: 40px;
+            /*padding-right: .5rem;*/
     }
     .menu-button {
         padding: 0 5px;
@@ -1544,6 +1613,11 @@ body:not(.post-template) .post-title {
         width: auto;
         margin: 2rem auto
     }
+    .nav ul {
+    	    width: auto;
+    	margin-left: 16px;
+    	margin-right: 16px;
+    }
     .post {
         width: auto;
         margin-top: 2rem;
@@ -1576,10 +1650,11 @@ body:not(.post-template) .post-title {
         font-size: 3rem
     }
     .post-excerpt p {
-        font-size: 0.85em
+        font-size: 0.84em
     }
     .page-description {
-        font-size: 1.6rem
+        font-size: 1.4rem;
+        margin: -1.25rem 0 0 8rem;
     }
     h1,
     h2,
@@ -1610,8 +1685,9 @@ body:not(.post-template) .post-title {
         font-size: 1.8rem
     }
     body:not(.post-template) .post-title {
-        font-size: 2.5rem
+        font-size: 2rem
     }
+
     .post-template .site-footer {
         margin-top: 0
     }
@@ -1630,7 +1706,7 @@ body:not(.post-template) .post-title {
         text-align: center
     }
     .post-footer .author {
-        margin: 0 0 2rem 0;
+        margin: 2rem 0 2rem 0;
         padding: 0 0 1.6rem 0;
         border-bottom: #EBF2F6 1px dashed
     }
@@ -1768,7 +1844,7 @@ body:not(.post-template) .post-title {
                 
             var l2 = document.createElement('link'); 
             l2.rel = 'stylesheet';
-            l2.href = '//fonts.googleapis.com/css?family=Open+Sans:700,400';
+            l2.href = '//fonts.googleapis.com/css?family=Montserrat:400,700|Lato';
             var h = document.getElementsByTagName('head')[0]; 
 
 
