--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -6,11 +6,17 @@
 {{! This is the post loop - each post will be output using this markup }}
 {{#foreach posts}}
 <article class="{{post_class}}">
+    {{#if image}}
+    <section class="post-image">
+        <img src="{{{image}}}"/>
+    </section>
+    {{/if}}
     <header class="post-header">
-        <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
+        <h3 class="post-title"><a href="{{url}}">{{{title}}}</a></h3>
     </header>
     <section class="post-excerpt">
-        <p>{{excerpt words="26"}} <a class="read-more" href="{{url}}">&raquo;</a></p>
+        <a class="read-more" href="{{url}}"> <p>{{excerpt words="26"}} &raquo;</p>
+        </a>
     </section>
     <footer class="post-meta">
         {{#if author.image}}<img class="author-thumb" src="{{author.image}}" alt="{{author.name}}" nopin="nopin" />{{/if}}
