--- a/post.hbs
+++ b/post.hbs
@@ -5,8 +5,9 @@
 
 {{! Everything inside the #post tags pulls data from the post }}
 {{#post}}
-    {{navigation}}
-<header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
+
+<header class="main-header post-head no-cover">
+{{navigation}}
 </header>
 
 <main class="content" role="main">
