--- a/post.hbs
+++ b/post.hbs
@@ -74,7 +74,7 @@
 
 </main>
 
-<aside class="read-next">
+<aside class="read-next inner">
     {{#next_post}}
     <a class="read-next-story {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
         <section class="post">
