fix margin at beginning of post

--- a/default.hbs
+++ b/default.hbs
@@ -1143,10 +1143,10 @@ body:not(.post-template) .post-title {
     min-height: 180px
 }
 .no-cover.post-head.main-header {
-    height: 52px;
+    height: 4rem;
     min-height: 0;
     padding: 0;
-            margin-bottom: 4rem;
+            /*margin-bottom: 4rem;*/
     background: transparent
 }
 .tag-head.main-header {
@@ -1555,9 +1555,9 @@ body:not(.post-template) .post-title {
         height: 30vh
     }
     .no-cover.post-head.main-header {
-        height: 52px;
-        padding: 0;
-        margin-bottom: 2rem;
+        /*height: 4;*/
+        /*padding: 0;*/
+        /*margin-bottom: 2rem;*/
     }
     .no-cover.author-head.main-header {
         padding: 0
