fix small screen post header

--- a/default.hbs
+++ b/default.hbs
@@ -1554,11 +1554,7 @@ body:not(.post-template) .post-title {
     .author-head.main-header {
         height: 30vh
     }
-    .no-cover.post-head.main-header {
-        /*height: 4;*/
-        /*padding: 0;*/
-        /*margin-bottom: 2rem;*/
-    }
+
     .no-cover.author-head.main-header {
         padding: 0
     }
@@ -1585,6 +1581,12 @@ body:not(.post-template) .post-title {
     }
     .no-cover.main-header {
         height: 30vh
+    }
+    .no-cover.post-head.main-header {
+    	
+        height: 2rem;
+        /*padding: 0;*/
+        /*margin-bottom: 2rem;*/
     }
     .archive-template .main-header {
         max-height: 20vh;
